--- a/home.css
+++ b/home.css
@@ -8,13 +8,62 @@
 
 
 button:hover{
-    background-color: rgb(107, 139, 247);
-    color: green;
+    background-color: rgb(66, 73, 151);
+    color: rgb(171, 161, 157);
 }
 
 h4:hover{
     color: rgb(9, 201, 25);
 }
 #a:hover{
-    color: rgb(92, 18, 230);
+    color: rgb(53, 144, 53);
 }
+#d1 {
+    /* width: 250px;
+    padding: 16px; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+#d1:hover {
+    box-shadow: 0 8px 16px rgba(23, 97, 110, 0.2), 0 12px 24px rgba(0, 0, 0, 0.19);
+    transform: scale(1.2); /* Increase size by 150% */
+  }     
+  
+  #d1 {
+    /* width: 250px;
+    padding: 16px; */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+  /* text styling vm connstruction */
+  .animate-charcter
+{
+   text-transform: uppercase;
+  background-image: linear-gradient(
+    -225deg,
+    #e9e02f 0%,
+    #9b52ea 29%,
+    #ff1361 67%,
+    #fff800 100%
+  );
+  background-size: auto auto;
+  background-clip: border-box;
+  background-size: 200% auto;
+  color: #fff;
+  background-clip: text;
+  text-fill-color: transparent;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: textclip 2s linear infinite;
+  display: inline-block;
+      font-size: 25px;
+}
+
+@keyframes textclip {
+  to {
+    background-position: 200% center;
+  }
+}
+  /* end */
